# discord_bot

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/commands/: mod.rs
src/commands/chemistry/: elements.rs
